name:                scheme-compiler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tylerprete/scheme-compiler#readme
license:             BSD3
license-file:        LICENSE
author:              Tyler Prete
maintainer:          psyonic@gmail.com
copyright:           Tyler Prete 2016
category:            Misc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
extra-source-files: src/Language/Scheme/R5RS/Parser/Lexer.x
                    src/Language/Scheme/R5RS/Parser/Parser.y

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , array
                     , value-supply == 0.6
  build-tools:         happy, alex
  default-language:    Haskell2010
  exposed-modules:
      Language.Scheme.R5RS.Transformer.CPSTransformer
      Language.Scheme.R5RS.Parser.Lexer
      Language.Scheme.R5RS.Parser.Parser
      Language.Scheme.R5RS.Syntax.Expression
      Language.Scheme.R5RS.Syntax.PrettyPrint
  other-modules:
      Language.Scheme.R5RS.Parser.ParserUtils
      Language.Scheme.R5RS.Parser.Token

executable scheme-compiler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , value-supply == 0.6
                     , scheme-compiler
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tylerprete/scheme-compiler
